tests/ui/contracts/internal_machinery/internal-feature-gating.stderr
error[E0658]: contract internal machinery is for internal use only
  --> $DIR/internal-feature-gating.rs:16:28
   |
LL |     fn identity_1() -> i32 contract_requires(|| true) { 10 }
   |                            ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #128044 <https://github.com/rust-lang/rust/issues/128044> for more information
   = help: add `#![feature(contracts_internals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: contract internal machinery is for internal use only
  --> $DIR/internal-feature-gating.rs:18:28
   |
LL |     fn identity_2() -> i32 contract_ensures(|_| true) { 10 }
   |                            ^^^^^^^^^^^^^^^^
   |
   = note: see issue #128044 <https://github.com/rust-lang/rust/issues/128044> for more information
   = help: add `#![feature(contracts_internals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `contracts_internals`
  --> $DIR/internal-feature-gating.rs:5:5
   |
LL |     core::intrinsics::contract_checks();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #128044 <https://github.com/rust-lang/rust/issues/128044> for more information
   = help: add `#![feature(contracts_internals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `contracts_internals`
  --> $DIR/internal-feature-gating.rs:7:5
   |
LL |     core::intrinsics::contract_check_requires(|| true);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #128044 <https://github.com/rust-lang/rust/issues/128044> for more information
   = help: add `#![feature(contracts_internals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `contracts_internals`
  --> $DIR/internal-feature-gating.rs:9:5
   |
LL |     core::intrinsics::contract_check_ensures( |_|true, &1);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #128044 <https://github.com/rust-lang/rust/issues/128044> for more information
   = help: add `#![feature(contracts_internals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `contracts_internals`
  --> $DIR/internal-feature-gating.rs:12:5
   |
LL |     core::contracts::build_check_ensures(|_: &()| true);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #128044 <https://github.com/rust-lang/rust/issues/128044> for more information
   = help: add `#![feature(contracts_internals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0658`.
